--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.1.5",
+    "@iexec/dataprotector": "beta",
+    "@iexec/web3mail": "^1.0.4",
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "~5.28.6",
     "@uniswap/sdk-core": "~4.0.1",
@@ -22,6 +24,7 @@
     "blo": "~1.0.1",
     "burner-connector": "~0.0.8",
     "daisyui": "4.12.10",
+    "graphql": "^16.9.0",
     "next": "~14.2.11",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
