create group via bandada

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -12,3 +12,8 @@
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 
+# ========== WEB3MAIL ==============
+NEXT_PUBLIC_WEB3MAIL_APP_ADDRESS="web3mail.apps.iexec.eth"
+
+# ========== BANDADA ==============
+NEXT_PUBLIC_BANDADA_API_KEY=
