--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,6 +14,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@bandada/api-sdk": "^2.3.3",
     "@heroicons/react": "~2.1.5",
     "@iexec/dataprotector": "beta",
     "@iexec/web3mail": "^1.0.4",
@@ -36,8 +37,7 @@
     "use-debounce": "~8.0.4",
     "usehooks-ts": "2.13.0",
     "viem": "2.21.7",
-    "wagmi": "2.12.11",
-    "zustand": "~4.1.2"
+    "wagmi": "2.12.11"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "~4.1.1",
@@ -56,5 +56,8 @@
     "type-fest": "~4.6.0",
     "typescript": "5.5.3",
     "vercel": "~37.4.2"
+  },
+  "resolutions": {
+    "new-zustand": "^5.0.0-rc.2"
   }
 }
