test proofs for bandada

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -18,7 +18,11 @@
     "@heroicons/react": "~2.1.5",
     "@iexec/dataprotector": "beta",
     "@iexec/web3mail": "^1.0.4",
+    "@noble/hashes": "^1.5.0",
     "@rainbow-me/rainbowkit": "2.1.6",
+    "@semaphore-protocol/group": "^4.3.0",
+    "@semaphore-protocol/identity": "^4.3.0",
+    "@semaphore-protocol/proof": "^4.3.0",
     "@tanstack/react-query": "~5.28.6",
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
