--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -30,6 +30,7 @@
     "burner-connector": "~0.0.8",
     "daisyui": "4.12.10",
     "graphql": "^16.9.0",
+    "hydra-synth": "^1.3.29",
     "next": "~14.2.11",
     "next-nprogress-bar": "~2.3.13",
     "next-themes": "~0.3.0",
